sso-ha.yaml
#####################Creating Serviceaccount, Roles and RoleBinding For JGROUPS Discovery Protocol (KUBE_PING)######################
apiVersion: v1
kind: Namespace
metadata:
  name: sso
