keycloak-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: sso
  labels:
    app: sso
    role: frontend
  annotations:
    kubernetes.io/change-cause: "Deploying Keycloak Latest Version"
    kubernetes.io/Revision: "10"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector: 
    matchLabels:
      app: sso
      role: frontend
  template:
    metadata:
      labels:
        app: sso
        role: frontend
    spec:
      serviceAccount: keycloak-kubeping-service-account
      serviceAccountName: keycloak-kubeping-service-account
### Pod replicas will schedule differnet nodes using Pod-Anti-Affinity for Keycloak HA ###
      affinity:
        podAntiAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 100  
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - sso
              topologyKey: kubernetes.io/hostname
      restartPolicy: Always
      containers:
      - name: keycloak
        image: jboss/keycloak:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1000m
            memory: 4096Mi
          requests:
            cpu: 500m
            memory: 2048M

        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: sso
spec:
  selector:
    app: sso
    role: frontend
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
