sso-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: sso
spec:
  type: ClusterIP
  selector:
    app: sso
    role: backend
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: sso
    role: backend
  namespace: sso
  annotations:
    kubernetes.io/change-cause: "Deploying Postgres Latest Version"
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: sso
      role: backend
  template:
    metadata:
      labels:
        app: sso
        role: backend
    spec:
      restartPolicy: Always
      containers:
      - name: postgres
        image: postgres:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
          subPath: data
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      storageClassName: nfs-client
      resources:
        requests:
          storage: 1Gi
      accessModes:
      - ReadWriteOnce
