sso-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-access
  namespace: sso
spec:
  podSelector:
    matchLabels:
      app: sso
      role: backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: sso
    - podSelector:
        matchLabels:
          app: sso
          role: frontend
    ports:
    - protocol: TCP
      port: 5432
